# containers

./: .gitconfig  .gitignore  build_common.sh  claudeinf.txt  common_requirements.txt  copy_experiment.sh  export_skills.sh  fastapi_requirements.txt  fix_git.sh  import_skills.sh  init_git.sh  lab_requirements.txt  r.txt  socket_requirements.txt  sockets_requirements.txt  t1.sh  test_logger.py  todo.txt  todo.txt.save  todo.txt.save.1  update_git.sh  x.txt
.claude/: .credentials.json  history.jsonl
AnaCredit/: questions.txt  sample_counterparty.csv
AnaCredit_c/: update_host_skills.sh
X_AnaCredit_virt/: .env.example  .gitignore  readme.txt
claude_exp/: pyvenv.cfg
clexp/: CLAUDE.md  questions.txt  test.md  x.txt
clients/: build_mysql_venv.sh  build_restapi_venv.sh  fix.sh  x.txt
common/: .txt  __init__.py  common_requirements.txt  pyvenv.cfg  requirements.txt  setup.py  test.py
export_container/: .gitignore  export_to_containers.sh  pull_container.sh  push_container.sh  requirements.txt  validate.sh
exported_skills/: anacredit.md  bista.md  compare_skill.md  crypto.md  find_duplicates.md  github_action_test.md  kresta.md  router.md  who_am_i.md
fastapi/: Dockerfile  build.sh  build_fastapi_venv  build_fastapi_venv.sh  crypto_app_requirements.txt  docker-compose-nginx.yml  docker-compose.template.yml  docker-compose.yml  docker-mysql-compose.yml  docker_terminal.sh  fastapi_requirements.txt  log.txt  r2.txt  (+7 more)
old_utilities/: pyproject.toml
old_utilities/xx_utilities/: README.md  pyvenv.cfg
old_utilities/xx_utilities/pn_utilities.egg-info/: SOURCES.txt
(+891 files in other folders)
