# from https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pn_utilities"
version = "0.0.1"
authors = [
  { name="Per Nielsen", email="dontwantspam@example.com" },
]
description = "Different utilities such as PnLogger"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"